--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-/parser/parse.js
+/parser/**/*.js
 
 npm-debug.log*
 yarn-debug.log*
