Adding filter panel

--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "lodash": "^4.17.21",
+    "pdf-table-extractor": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "parse": "tsc parser/index.ts && node parser/index.js"
   },
   "eslintConfig": {
     "extends": [
