--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@types/node": "^12.20.8",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "lodash": "^4.17.21",
+    "pdf-table-extractor": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
-    "web-vitals": "^1.1.1",
-    "lodash": "^4.17.21",
-    "pdf-table-extractor": "^1.0.3"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
