--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.20.8",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "pdf-table-extractor": "^1.0.3",
     "react": "^17.0.2",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.168"
   }
 }
