Fixing issue with some missing descriptions

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.22",
+    "@types/md5": "^2.3.0",
     "@types/node": "^12.20.8",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "pdf-table-extractor": "^1.0.3",
     "react": "^17.0.2",
     "react-device-detect": "^1.17.0",
