--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
@@ -53,6 +55,8 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.6",
-    "@types/lodash": "^4.14.168"
+    "@types/lodash": "^4.14.168",
+    "@types/react-helmet": "^6.1.1",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
