--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.20.8",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "dayjs": "^1.10.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
