--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/lab": "^5.0.0-alpha.78",
-    "@mui/material": "^5.6.2",
-    "@mui/styles": "^5.6.2",
-    "@mui/x-data-grid": "^5.9.0",
+    "@mui/icons-material": "5.10.9",
+    "@mui/lab": "5.0.0-alpha.107",
+    "@mui/material": "5.10.13",
+    "@mui/styles": "5.10.10",
+    "@mui/x-data-grid": "5.17.11",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
