--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
     "@mui/material": "5.10.13",
     "@mui/styles": "5.10.10",
     "@mui/x-data-grid": "5.17.11",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.22",
     "@types/md5": "^2.3.0",
     "@types/node": "^12.20.8",
     "@types/react": "^17.0.3",
@@ -28,9 +24,9 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.2.4",
+    "typescript": "4.8.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
