--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "source-map-explorer": "^2.5.2",
     "typescript": "4.8.4",
@@ -39,8 +39,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
