--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
   "devDependencies": {
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.168",
-    "@types/react-helmet": "^6.1.1",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-helmet": "^6.1.1"
   }
 }
